# traces2evals

./: .gitignore  LICENSE  README.md  definitions.yaml.example  open_standard_evaluation.yaml.example  pyproject.toml  traces2evals.yaml.example
.claude/skills/open-standard-evaluation/: SKILL.md
.claude/skills/traces2evals/: SKILL.md
.open_standard_evaluation_cache/: manifest.json
src/open_standard_evaluation/: __init__.py  __main__.py  checkpoint.py  cli.py  config.py  pipeline.py
src/open_standard_evaluation/adapters/: __init__.py  base.py  langfuse.py
src/open_standard_evaluation/llm/: client.py
src/open_standard_evaluation/models/: __init__.py  cluster.py  facet.py  session.py
src/open_standard_evaluation/prompts/: __init__.py  eval_crafting.py
src/open_standard_evaluation/steps/: cluster.py  coverage_gate.py  embed.py  facets.py  generate.py  ingest.py  label.py  quality_gate.py  sanitize.py
src/traces2evals/: __init__.py  __main__.py  checkpoint.py  cli.py  config.py  definitions.py  pipeline.py
src/traces2evals/adapters/: __init__.py  base.py  langfuse.py
src/traces2evals/llm/: client.py
src/traces2evals/models/: __init__.py  eval_item.py  pattern.py
src/traces2evals/output/: braintrust.py  csv.py  jsonl.py
src/traces2evals/prompts/: __init__.py  cluster_labeling.py  facet_extraction.py  quality_assessment.py
src/traces2evals/steps/: cluster.py  coverage_gate.py  embed.py  facets.py  generate.py  (+4 more)
tests/: conftest.py  test_adapters.py  test_checkpoint.py  test_cli.py  test_config.py  test_coverage_gate.py  test_definitions.py  test_e2e.py  test_llm_client.py  test_models.py  test_output.py  test_sanitize.py
