[project]
name = "open-standard-evaluation"
version = "0.1.0"
description = "Generate diverse eval test suites from production agent traces. Ingests sessions from observability platforms, clusters for behavioral diversity, outputs structured evals."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Rahul Raj"}]
keywords = ["evals", "llm", "agents", "observability", "langfuse", "clustering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "litellm>=1.40",
    "langfuse>=2.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "hdbscan>=0.8.33",
    "umap-learn>=0.5",
    "scikit-learn>=1.3",
    "tiktoken>=0.5",
    "tenacity>=8.0",
    "tqdm>=4.0",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
local-embeddings = ["sentence-transformers>=2.0"]
auto-tune = ["optuna>=3.0"]
viz = ["matplotlib>=3.7", "seaborn>=0.12"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "ruff>=0.4"]

[project.scripts]
ose = "open_standard_evaluation.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
